Implement public location broadcast feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">VTHokieFinder</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_broadcast">Broadcast</string>
 </resources>
