Implement selective broadcasting feature for circles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">VTHokieFinder</string>
     <string name="action_broadcast">Broadcast</string>
+    <string name="action_show_circles">Show Circles</string>
     <string name="action_logout">Logout</string>
 </resources>
