Change LoginActivity to support ParseLoginActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="action_broadcast">Broadcast</string>
     <string name="action_show_circles">Show Circles</string>
     <string name="action_logout">Logout</string>
+
+    <string name="facebook_application_id">161104727570047</string>
 </resources>
