--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,17 @@
 <resources>
     <string name="app_name">VTHokieFinder</string>
+
+    <!-- Descriptions for toolbar items -->
     <string name="action_broadcast">Broadcast</string>
     <string name="action_show_circles">Show Circles</string>
     <string name="action_logout">Logout</string>
 
+    <!-- Descriptions for navigation drawer actions and items -->
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+    <string name="drawer_settings">Settings</string>
+    <string name="drawer_logout">Logout</string>
+
+    <!-- Application IDs / API keys -->
     <string name="facebook_application_id">1636789559907792</string>
 </resources>
