Add a GraphRequest capturing a new user's name and email when logging via Facebook

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,11 @@
 
     <!-- Application IDs / API keys -->
     <string name="facebook_application_id">1636789559907792</string>
+
+    <!-- Facebook permissions -->
+    <string-array name="facebook_permissions">
+        <item>public_profile</item>
+        <item>email</item>
+        <item>user_friends</item>
+    </string-array>
 </resources>
