--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,11 @@
     <string name="drawer_settings">Settings</string>
     <string name="drawer_logout">Logout</string>
 
+    <!-- Actions to handle friends -->
+    <string-array name="actions_friends">
+        <item>Remove friend</item>
+    </string-array>
+
     <!-- Application IDs / API keys -->
     <string name="facebook_application_id">1636789559907792</string>
 
