--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">VTHokieFinder</string>
     <string name="create_circle">New Circle</string>
     <string name="find_friends">Find Friends</string>
+    <string name="details">Details</string>
     <string name="profile">Profile</string>
     <string name="settings">Settings</string>
 
