--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="action_broadcast">Broadcast</string>
     <string name="action_show_circles">Show Circles</string>
     <string name="action_logout">Logout</string>
-    <string name="action_save_circle">Save</string>
+    <string name="action_save">Save</string>
 
     <!-- Descriptions for navigation drawer actions and items -->
     <string name="drawer_open">Open</string>
