--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,12 @@
     <string name="action_show_circles">Show Circles</string>
     <string name="action_logout">Logout</string>
     <string name="action_save">Save</string>
+    <string name="action_add_circle">Add circle</string>
+    <string name="action_leave_circle">Leave circle</string>
+    <string name="action_cancel_circle_request">Cancel request</string>
+    <string name="action_add_friend">Add friend</string>
+    <string name="action_remove_friend">Remove friend</string>
+    <string name="action_cancel_pending">Cancel request</string>
 
     <!-- Descriptions for navigation drawer actions and items -->
     <string name="drawer_open">Open</string>
