--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="find_friends">Find Friends</string>
     <string name="details">Details</string>
     <string name="profile">Profile</string>
+    <string name="invites">Invites</string>
     <string name="settings">Settings</string>
 
     <!-- Descriptions for toolbar items -->
@@ -22,13 +23,24 @@
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
     <string name="drawer_profile">Profile</string>
-    <string name="drawer_friends">Friends</string>
+    <string name="drawer_invites">Invites</string>
     <string name="drawer_settings">Settings</string>
     <string name="drawer_logout">Logout</string>
 
     <!-- Actions to handle users -->
     <string-array name="actions_users">
         <item>Add as friend</item>
+    </string-array>
+
+    <!-- Actions to handle incoming friend invites -->
+    <string-array name="actions_incoming_friend_invites">
+        <item>Accept invite</item>
+        <item>Deny invite</item>
+    </string-array>
+
+    <!-- Actions to handle outgoing friend invites -->
+    <string-array name="actions_outgoing_friend_invites">
+        <item>Cancel invite</item>
     </string-array>
 
     <!-- Actions to handle non-friends -->
